--- a/index.html
+++ b/index.html
@@ -7,22 +7,23 @@
 </head>
 <body>
   <header class="main-header">
-    <div class="container">
+    <div class="main-header-layout container">
+
       <div class="index-logo">
-        <a href="#"><img src="img/index/nerds_logo.png" width="227px" height="75px" alt="Дизайн студия Nerds"></a>
+        <a href="#"><img src="img/index/nerds_logo.png" width="160px" height="65px" alt="Дизайн студия Nerds"></a>
       </div>
       <nav class="main-navigation">
         <ul>
-          <li>
+          <li class="nav">
             <a href=#>Студия</a>
           </li>
-          <li>
+          <li class="nav">
             <a href=#>Клиенты</a>
           </li>
-          <li>
+          <li class="nav">
             <a href=#>Магазин</a>
           </li>
-          <li>
+          <li class="nav">
             <a href=#>Контакты</a>
           </li>
         </ul>
@@ -30,6 +31,8 @@
       <div class="user-block">
         <a class="basket" href="#">Корзина</a>
       </div>
+    </div>
+    <!--
       <div class="slider">
         <div class="item">
           <div class="left-side">
@@ -38,7 +41,7 @@
             <a class="info-btn" href="#">Узнать больше</a>
           </div>
           <div class="right-side-mobile">
-            <img src="img/index/mobile.png" height="567px" width="945px">
+            <img src="img/index/mobile.png" height="420px" width="760px">
           </div>
         </div>
         <div class="item">
@@ -48,7 +51,7 @@
             <a class="info-btn" href="#">Узнать больше</a>
           </div>
           <div class="right-side-desctops">
-            <img src="img/index/desctops.png" height="567px" width="869px">
+            <img src="img/index/desctops.png" height="420px" width="760px">
           </div>
         </div>
         <div class="item">
@@ -58,7 +61,7 @@
             <a class="info-btn" href="#">Узнать больше</a>
           </div>
           <div class="right-side-touchpad">
-            <img src="img/index/touchpad.png" height="529px" width="1120px">
+            <img src="img/index/touchpad.png" height="420px" width="760px">
           </div>
         </div>
         <div class="slider-navigate">
@@ -67,6 +70,7 @@
           <button class="slider-nav"></button>
         </div>
       </div>
+      -->
     </div>
   </header>
   <main>
@@ -106,18 +110,17 @@
         </div>
         <div class="right-side">
           <img class="logo-img" src="img/index/nerds_illustration.jpg" height="265px" width="491px">
-          <span>С 2004 года мы любим точность во всем:</span>
+          <span class="small-title">С 2004 года мы любим точность во всем:</span>
           <div class="features">
-            <span class="procents">146%</span>
-            <span class="description">Уровень самоотдачи</span>
-          </div>
-          <div class="features">
-            <span class="procents">100%</span>
-            <span class="description">Соблюдение сроков</span>
-          </div>
-          <div class="features">
-            <span class="procents">50%</span>
-            <span class="description">Минимальная предоплата</span>
+            <div class="procents">
+              <span>146%</span>
+                <span>100%</span>
+                <span>50%</span>
+            </div>
+            <div class="description">
+              <span>Уровень самоотдачи</span>
+              <span>Соблюдение сроков</span>
+              <span>Минимальная предоплата</span>
           </div>
         </div>
       </section>
@@ -130,7 +133,7 @@
     </div>
   </main>
   <section class="map">
-    <div class="contacts">
+    <div class="contacts container">
       <div class="contacts-infotmation">
         <b>Nerds Design Studio</b>
         191186, Санкт-Петербург,<br>
@@ -147,7 +150,8 @@
         </div>
       </section>
       <footer class="main-footer">
-        <div class="container">
+        <div class="main-footer-layout container">
+
           <div class="footer-information">
             <span>Давайте дружить, это выгодно!</span>
             <span>Скидка 10% для друзей из социальных сетей.</span>
@@ -157,7 +161,7 @@
             <a class="social-btn social-btn-fb" href="#">Фэйсбук</a>
             <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
           </div>
-        </div>
+
       </div>
     </footer>
   </body>
