обавила container в information

--- a/catalog.html
+++ b/catalog.html
@@ -193,7 +193,7 @@
     </div>
   </main>
   <section class="map">
-    <div class="contacts">
+    <div class="contacts container">
       <div class="contacts-infotmation">
         <b>Nerds Design Studio</b>
         191186, Санкт-Петербург,<br>
