--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Нёрдс</title>
-  <link href="css/style.css" rel="stylesheet">
+  <link  rel="stylesheet" href="css/normalize.css">
+  <link  rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
   <header class="main-header">
@@ -13,22 +15,22 @@
       </div>
       <nav class="main-navigation">
         <ul>
-          <li class="nav">
+          <li>
             <a href=#>Студия</a>
           </li>
-          <li class="nav">
+          <li>
             <a href=#>Клиенты</a>
           </li>
-          <li class="nav">
+          <li>
             <a href=#>Магазин</a>
           </li>
-          <li class="nav">
+          <li>
             <a href=#>Контакты</a>
           </li>
         </ul>
       </nav>
       <div class="user-block">
-        <a class="bascet" href="#">Корзина</a>
+        <a class="basket" href="#">Корзина</a>
       </div>
     </div>
     <div class="container">
