--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Нёрдс</title>
-  <link href="css/style.css" rel="stylesheet">
+  <link  rel="stylesheet" href="css/normalize.css">
+  <link  rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
   <header class="main-header">
@@ -14,16 +16,16 @@
       </div>
       <nav class="main-navigation">
         <ul>
-          <li class="nav">
+          <li>
             <a href=#>Студия</a>
           </li>
-          <li class="nav">
+          <li>
             <a href=#>Клиенты</a>
           </li>
-          <li class="nav">
+          <li>
             <a href=#>Магазин</a>
           </li>
-          <li class="nav">
+          <li>
             <a href=#>Контакты</a>
           </li>
         </ul>
