--- a/index.html
+++ b/index.html
@@ -34,64 +34,62 @@
         <a class="basket" href="#">Корзина</a>
       </div>
     </div>
-    <!--
-      <div class="slider">
-        <div class="item">
-          <div class="left-side">
-            <h2 class="title">Долго, дорого, скурпулезно</h2>
+      <div class="slider container">
+        <div class="item mobile">
+          <div class="left-mobile">
+            <h2 class="slider-title">Долго, дорого, скурпулезно</h2>
             <span>Математически выверенный дизайн для вашего сайта или мобильного приложения.</span>
             <a class="info-btn" href="#">Узнать больше</a>
           </div>
-          <div class="right-side-mobile">
-            <img src="img/index/mobile.png" height="420px" width="760px">
+          <div class="right-mobile">
+            <img src="img/index/mobile.png" height="415px" width="700px">
           </div>
         </div>
-        <div class="item">
-          <div class="left-side">
-            <h2 class="title">Любим математику как никто другой</h2>
+        <div class="item desctop">
+          <div class="left-desctops">
+            <h2 class="slider-title">Любим математику как никто другой</h2>
             <span>Никакого креатива, только математические формулы для расчета идеальных пропорций</span>
             <a class="info-btn" href="#">Узнать больше</a>
           </div>
-          <div class="right-side-desctops">
-            <img src="img/index/desctops.png" height="420px" width="760px">
+          <div class="right-desctops">
+            <img src="img/index/desctops.png" height="430px" width="665px">
           </div>
         </div>
-        <div class="item">
-          <div class="left-side">
-            <h2 class="title">Только ночь, только хардкор</h2>
+        <div class="item touchpad ">
+          <div class="left-touchpad">
+            <h2 class="slider-title">Только ночь, только хардкор</h2>
             <span>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</span>
             <a class="info-btn" href="#">Узнать больше</a>
           </div>
-          <div class="right-side-touchpad">
-            <img src="img/index/touchpad.png" height="420px" width="760px">
+          <div class="right-touchpad">
+            <img src="img/index/touchpad.png" height="415px" width="760px">
           </div>
         </div>
-        <div class="slider-navigate">
-          <button class="slider-nav"></button>
-          <button class="slider-nav"></button>
-          <button class="slider-nav"></button>
-        </div>
       </div>
-      -->
+      <div class="slider-navigate conteiner">
+        <button class="slider-nav"></button>
+        <button class="slider-nav"></button>
+        <button class="slider-nav"></button>
+      </div>
     </div>
   </header>
   <main>
     <div class="container">
       <section class="products">
         <div class="product">
-          <img src="img/index/illustration_1.jpg" height="189px" width="378px" alt="Веб-сайты">
+          <img src="img/index/illustration_1.jpg" height="146px" width="300px" alt="Веб-сайты">
           <b>Веб-сайты</b>
           <p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
           <a class="web-cite-btn" href="# ">Заказать</a>
         </div>
         <div class="product">
-          <img src="img/index/illustration_2.jpg" height="189px" width="378px" alt="Приложения">
+          <img src="img/index/illustration_2.jpg" height="146px" width="300px" alt="Приложения">
           <b>Приложения</b>
           <p>Покорите топ-10 приложений в<br> AppStore и GooglePlay</p>
           <a class="apps-btn" href="# ">Заказать</a>
         </div>
         <div class="product">
-          <img src="img/index/illustration_3.jpg" height="189px" width="378px" alt="Презентации">
+          <img src="img/index/illustration_3.jpg" height="146px" width="300px" alt="Презентации">
           <b>Презентации</b>
           <p>Вы даже не подозреваете,<br> насколько вы изумительрны!</p>
           <a class="presentation-btn" href="# ">Заказать</a>
@@ -111,7 +109,7 @@
           </ul>
         </div>
         <div class="right-side">
-          <img class="logo-img" src="img/index/nerds_illustration.jpg" height="265px" width="491px">
+          <img class="logo-img" src="img/index/nerds_illustration.jpg" height="210px" width="360px">
           <span class="small-title">С 2004 года мы любим точность во всем:</span>
           <div class="features">
             <div class="procents">
@@ -127,10 +125,10 @@
         </div>
       </section>
       <div class="partners">
-        <img src="img/index/html_academy.png" height="75px" width="265px" alt="HTML Academy">
-        <img src="img/index/borodinski.png" height="113px" width="265px" alt="Borodinski">
-        <img src="img/index/pink.png" height="75px" width="265px" alt="Pink">
-        <img src="img/index/mishka.png" height="114px" width="227px" alt="Mishka">
+        <img src="img/index/html_academy.png" height="70px" width="200px" alt="HTML Academy">
+        <img src="img/index/borodinski.png" height="88px" width="210px" alt="Borodinski">
+        <img src="img/index/pink.png" height="50px" width="185px" alt="Pink">
+        <img src="img/index/mishka.png" height="85px" width="173px" alt="Mishka">
       </div>
     </div>
   </main>
