--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <body>
   <header class="main-header">
     <div class="main-header-layout container">
-
       <div class="index-logo">
-        <a href="#"><img src="img/index/nerds_logo.png" width="160px" height="65px" alt="Дизайн студия Nerds"></a>
+        <a href="#"><img src="img/index/nerds_logo.png" width="160px" height="62px" alt="Дизайн студия Nerds"></a>
       </div>
+
       <nav class="main-navigation">
+
         <ul>
           <li>
             <a href=#>Студия</a>
@@ -38,11 +39,11 @@
         <div class="item mobile">
           <div class="left-mobile">
             <h2 class="slider-title">Долго, дорого, скурпулезно</h2>
-            <span>Математически выверенный дизайн для вашего сайта или мобильного приложения.</span>
+            <span class="slider-info">Математически выверенный дизайн для вашего сайта или мобильного приложения.</span>
             <a class="info-btn" href="#">Узнать больше</a>
           </div>
           <div class="right-mobile">
-            <img src="img/index/mobile.png" height="415px" width="700px">
+            <img src="img/index/mobile.png" height="400px" width="700px">
           </div>
         </div>
         <div class="item desctop">
@@ -77,21 +78,21 @@
     <div class="container">
       <section class="products">
         <div class="product">
-          <img src="img/index/illustration_1.jpg" height="146px" width="300px" alt="Веб-сайты">
-          <b>Веб-сайты</b>
-          <p>Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
+          <img  src="img/index/illustration_1.jpg" height="146px" width="300px" class="product-img" alt="Веб-сайты">
+          <b class="product-title">Веб-сайты</b>
+          <p class="product-info">Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
           <a class="web-cite-btn" href="# ">Заказать</a>
         </div>
         <div class="product">
-          <img src="img/index/illustration_2.jpg" height="146px" width="300px" alt="Приложения">
-          <b>Приложения</b>
-          <p>Покорите топ-10 приложений в<br> AppStore и GooglePlay</p>
+          <img  src="img/index/illustration_2.jpg" height="146px" width="300px" class="product-img" alt="Приложения">
+          <b class="product-title">Приложения</b>
+          <p class="product-info">Покорите топ-10 приложений в<br> AppStore и GooglePlay</p>
           <a class="apps-btn" href="# ">Заказать</a>
         </div>
         <div class="product">
-          <img src="img/index/illustration_3.jpg" height="146px" width="300px" alt="Презентации">
-          <b>Презентации</b>
-          <p>Вы даже не подозреваете,<br> насколько вы изумительрны!</p>
+          <img src="img/index/illustration_3.jpg" height="146px" width="300px" class="product-img" alt="Презентации">
+          <b class="product-title">Презентации</b>
+          <p class="product-info">Вы даже не подозреваете,<br> насколько вы изумительрны!</p>
           <a class="presentation-btn" href="# ">Заказать</a>
         </div>
       </section>
@@ -99,28 +100,34 @@
         <div class="left-side">
           <h2 class="second-title">Мы-маленькая, но гордая дизайн-студия из Краснодара.</h2>
           <p>
-            Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креативаю Работаем не покладая рук, как роботы.
+            Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.
           </p>
           <b class="small-title">Выполняем заказы на разработку:</b>
-          <ul>
+          <div class="content-list">
+          <ul >
             <li>Веб-сайтов любой сложности</li>
             <li>обильных приложений для iOS и Android</li>
             <li>Слайдшоу и видео для корпоративных презентаций</li>
           </ul>
         </div>
+        </div>
         <div class="right-side">
           <img class="logo-img" src="img/index/nerds_illustration.jpg" height="210px" width="360px">
           <span class="small-title">С 2004 года мы любим точность во всем:</span>
           <div class="features">
-            <div class="procents">
-              <span>146%</span>
-                <span>100%</span>
-                <span>50%</span>
-            </div>
-            <div class="description">
-              <span>Уровень самоотдачи</span>
-              <span>Соблюдение сроков</span>
-              <span>Минимальная предоплата</span>
+            <div class="column-1">
+              <span class="procents">146<sup>%</sup></span>
+                <span class="description">Уровень самоотдачи</span>
+              </div>
+            <div class="column-2">
+                <span class="procents">100<sup>%</sup></span>
+                  <span class="description">Соблюдение сроков</span>
+                </div>
+                <div class="column-3">
+                  <span class="procents">50<sup>%</sup></span>
+                    <span class="description">Минимальная предоплата</span>
+                  </div>
+
           </div>
         </div>
       </section>
@@ -132,34 +139,55 @@
       </div>
     </div>
   </main>
+  <div class="write-us-container">
+  <div class="write-us">
+    <span class="write-us-title">Напишите нам</span>
+    <form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
+      <div class="your-name">
+      <label for="name-field">Ваше имя:</label><br>
+      <input type="text" class="name" id="name-field" value="" placeholder="Представьтесь, пожалуйста">
+    </div>
+    <div class="your-mail">
+        <label for="email-field">Ваш e-mail:</label><br>
+      <input type="text" class="email" id="email-field" value="" placeholder="Для отправки ответа">
+    </div>
+    <div class="your-letter">
+      <label for="text-field">Тект письма:</label><br>
+      <input type="text-area" class="leter" id="text-field" value="" placeholder="В свободной форме">
+    </div>
+
+      <button class="btn" type="submit">Отправить</button>
+    </form>
+  </div>
+</div>
   <section class="map">
-    <div class="contacts container">
+    <div class="contacts-container">
       <div class="contacts-infotmation">
-        <b>Nerds Design Studio</b>
+        <b class="contacts-infotmation-name">Nerds Design Studio</b><br>
+        <span class="contacts-infotmation-adress">
         191186, Санкт-Петербург,<br>
         Б. Конюшенная, д. 19.8<br>
+      </span>
+      <span class="tel">
         Тел: +7 (812) 275-75-75<br>
-      </div>
-      <a class="contact-button" href="#">Напишите нам</a>
-      <div class="modal-block">
-        <form action="#" method="post">
-          <h3 class="modal-title">Напишите нам<h3>
-            <input type="textarea" class="modal">
-            <button>Отправить</button>
-          </form>
-        </div>
+      </span>
+    </div>
+    <div class="contact-button">
+      <a class="c-btn" href="#" >Напишите нам</a>
+    </div>
+    </div>
       </section>
       <footer class="main-footer">
         <div class="main-footer-layout container">
 
           <div class="footer-information">
-            <span>Давайте дружить, это выгодно!</span>
-            <span>Скидка 10% для друзей из социальных сетей.</span>
+            <span class="slogan">Давайте дружить, это выгодно!</span>
+            <span class="slogan-description">Скидка 10% для друзей из социальных сетей.</span>
           </div>
           <div class="social-button">
-            <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-            <a class="social-btn social-btn-fb" href="#">Фэйсбук</a>
-            <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+            <a class="social-btn social-btn-vk" href="#">вконтакте</a>
+            <a class="social-btn social-btn-fb" href="#">фейсбук</a>
+            <a class="social-btn social-btn-inst" href="#">инстаграм</a>
           </div>
 
       </div>
