--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
-  <header class="main-header">
+  <header class="header">
     <div class="main-header-layout container">
       <div class="index-logo">
         <a href="#"><img src="img/catalog/nerds_logo.png" width="227px" height="75px" alt="Дизайн студия Nerds"></a>
@@ -33,18 +33,28 @@
         <a class="basket" href="#">Корзина</a>
       </div>
     </div>
-    <div class="container">
+
     <h1 class="main-title">Магазин готовых шаблонов</h1>
-  </div>
+
   </header>
   <main>
     <div class="container">
       <div class="content">
       <div class="left-panel">
-        <form action="#" method="post">
-          <div class="range">
-            <input type="range" min="0" max="15 000" step="1">
+        <form action="form.php" method="GET">
+      <div class="range-filter">
+        <div class="range-controls">
+          <div class="scale">
+            <div class="bar" style="margin-left: 20%; width: 30%"></div>
           </div>
+          <div class="toggle toggle-min"></div>
+          <div class="toggle toggle-max"></div>
+        </div>
+        <div class="price-controls">
+          <label class="min-price">от <input name="min-price" type="text" value="0"></label>
+          <label class="max-price">до <input name="max-price" type="text" value="15000"></label>
+        </div>
+      </div>
           <div class="type-of-net">
             <h2 class="net-name">Сетка:</h2>
             <ul>
@@ -57,7 +67,7 @@
                 <label for="subscribe-field-7">Фиксированная</label>
               </li>
               <li>
-                <input type="checkbox" name="net-type" id="subscribe-field-8">
+                <input type="radio" name="net-type" id="subscribe-field-8">
                 <label for="subscribe-field-8">Резиновая</label>
               </li>
             </ul>
@@ -87,7 +97,7 @@
               </li>
             </ul>
           </div>
-          <button class="show-button">Показать</button>
+          <button class="btn">Показать</button>
         </form>
       </div>
       <div class="right-panel">
@@ -96,7 +106,7 @@
           <span class="sort-text">Сортировать</span>
           <ul>
             <li class="type">
-              <a href="#">По цене</a>
+              <a href="#" class="active">По цене</a>
             </li>
             <li class="type">
               <a href="#">По типу</a>
@@ -109,66 +119,66 @@
 
         <section class="catalog-gallery">
           <article class="catalog-gallery-item">
-            <img class="item-image" src="img/catalog/sedona.jpg" height="756px" weidth="491px" alt="Sedona">
+            <img class="item-image" src="img/catalog/sedona.jpg" height="615px" weidth="360px" alt="Sedona">
             <div class="wrapper-block">
               <a href="#">
                 <h2 class="item-title">Sedona</h2>
               </a>
-              <span class="item-description">Информационный сайт<br>для туристов</span>
+              <span class="wrapper-description">Информационный сайт<br> для туристов</span>
               <a href="#" class="btn">9 900 руб.</a>
             </div>
           </article>
           <article class="catalog-gallery-item">
-            <img class="item-image" src="img/catalog/pink.jpg" height="756px" weidth="491px" alt="Pink">
+            <img class="item-image" src="img/catalog/pink.jpg" height="615px" weidth="360px" alt="Pink">
             <div class="wrapper-block">
               <a href="#">
-                <h2 class="item-title">Pink</h2>
+                <h2 class="item-title">Pink App</h2>
               </a>
-              <span class="item-description"></span>
-              <a href="#" class="btn"></a>
+              <span class="wrapper-description">Продуктовый лендинг<br> приложения для IOS И Android</span>
+              <a href="#" class="btn">9 900 руб.</a>
             </div>
           </article>
           <article class="catalog-gallery-item">
-            <img class="item-image" src="img/catalog/barbershop.jpg" height="756px" weidth="491px" alt="Borodinski">
+            <img class="item-image" src="img/catalog/barbershop.jpg" height="615px" weidth="360px" alt="Borodinski">
             <div class="wrapper-block">
               <a href="#">
-                <h2 class="item-title">Borodincki</h2>
+                <h2 class="item-title">Barbershop</h2>
               </a>
-              <span class="item-description"></span>
-              <a href="#" class="btn"></a>
+              <span class="wrapper-description">Сайт салона красоты.<br> Для мужчин, да.</span>
+              <a href="#" class="btn">9 900 руб.</a>
             </div>
 
           </article>
           <article class="catalog-gallery-item">
-            <img class="item-image" src="img/catalog/mishka.jpg" height="756px" weidth="491px" alt="Mishka">
+            <img class="item-image" src="img/catalog/mishka.jpg" height="615px" weidth="360px" alt="Mishka">
             <div class="wrapper-block">
               <a href="#">
                 <h2 class="item-title">Mishka</h2>
               </a>
-              <span class="item-description"></span>
-              <a href="#" class="btn"></a>
+              <span class="wrapper-description">Интернет-магазин<br> вязаных игрушек</span>
+              <a href="#" class="btn">9 900 руб.</a>
             </div>
 
           </article>
           <article class="catalog-gallery-item">
-            <img class="item-image" src="img/catalog/aplus.jpg" height="756px" weidth="491px" alt="Аplus">
+            <img class="item-image" src="img/catalog/aplus.jpg" height="615px" weidth="260px" alt="Аplus">
             <div class="wrapper-block">
               <a href="#">
-                <h2 class="item-title">A+</h2>
+                <h2 class="item-title">A Plus</h2>
               </a>
-              <span class="item-description"></span>
-              <a href="#" class="btn"></a>
+              <span class="wrapper-description">Лендинг курсов повышения<br> квалификации</span>
+              <a href="#" class="btn">9 900 руб.</a>
             </div>
 
           </article>
           <article class="catalog-gallery-item">
-            <img class="item-image" src="img/catalog/kvast.jpg" height="756px" weidth="491px" alt="Кваст">
+            <img class="item-image" src="img/catalog/kvast.jpg" height="615px" weidth="360px" alt="Кваст">
             <div class="wrapper-block">
               <a href="#">
                 <h2 class="item-title">Кваст</h2>
               </a>
-              <span class="item-description"></span>
-              <a href="#" class="btn"></a>
+              <span class="wrapper-description">Промо-сфйт производителя<br> крафтового кваса</span>
+              <a href="#" class="btn">9 900 руб.</a>
             </div>
 
           </article>
@@ -179,10 +189,10 @@
               <span class="btn btn-disabled">1</span>
             </li>
             <li class="pag">
-              <a class="btn btn-big" href="#">2</a>
+              <a class="btn " href="#">2</a>
             </li>
             <li class="pag">
-              <a class="btn btn-big" href="#">3</a>
+              <a class="btn " href="#">3</a>
             </li>
             <li class="pag">
               <a class="btn btn-big" href="#">Седующая</a>
@@ -194,31 +204,55 @@
 </div>
     </div>
   </main>
-  <section class="map">
-    <div class="contacts container">
+  <section class="map container">
+    <div class="contacts-container">
       <div class="contacts-infotmation">
-        <b>Nerds Design Studio</b>
+        <b class="contacts-infotmation-name">Nerds Design Studio</b><br>
+        <span class="contacts-infotmation-adress">
         191186, Санкт-Петербург,<br>
         Б. Конюшенная, д. 19.8<br>
+      </span>
+      <span class="tel">
         Тел: +7 (812) 275-75-75<br>
-      </div>
-      <a class="contact-button" href="#">Напишите нам</a>
-      
+      </span>
+    </div>
+    <div class="contact-button">
+      <a  href="#" >Напишите нам</a>
+    </div>
+    </div>
       </section>
       <footer class="main-footer">
         <div class="main-footer-layout container">
 
           <div class="footer-information">
-            <span>Давайте дружить, это выгодно!</span>
-            <span>Скидка 10% для друзей из социальных сетей.</span>
+            <span class="slogan">Давайте дружить, это выгодно!</span>
+            <span class="slogan-description">Скидка 10% для друзей из социальных сетей.</span>
           </div>
           <div class="social-button">
-            <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-            <a class="social-btn social-btn-fb" href="#">Фэйсбук</a>
-            <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+            <a class="social-btn social-btn-vk" href="#">вконтакте</a>
+            <a class="social-btn social-btn-fb" href="#">фейсбук</a>
+            <a class="social-btn social-btn-inst" href="#">инстаграм</a>
           </div>
 
       </div>
     </footer>
+    <div class="modal-content">
+      <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
+      <h2 class="modal-content-title">Напишите нам</h2>
+      <form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
+        <label>
+          Вашe имя: <br>
+        <input class="name" type="text" name="name" placeholder="Представьтесь, пожалуйста">
+      </label>
+      <label>
+          Ваш E-mail: <br>
+        <input class="email" type="text"  name="email" placeholder="Для отправки ответа">
+      </label>
+      <label>
+        Текст письма: <br>
+        <input class="letter" type="text-area"  name="letter" placeholder="В свободной форме">
+      </label>
+        <button class="btn" type="submit">Войти</button>
+    </div>
   </body>
   </html>
