--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <header class="main-header">
     <div class="main-header-layout container">
+
       <div class="index-logo">
         <a href="#"><img src="img/index/nerds_logo.png" width="160px" height="62px" alt="Дизайн студия Nerds"></a>
       </div>
@@ -35,42 +36,41 @@
         <a class="basket" href="#">Корзина</a>
       </div>
     </div>
-      <div class="slider container">
-        <div class="item mobile">
-          <div class="left-mobile">
-            <h2 class="slider-title">Долго, дорого, скурпулезно</h2>
-            <span class="slider-info">Математически выверенный дизайн для вашего сайта или мобильного приложения.</span>
-            <a class="info-btn" href="#">Узнать больше</a>
-          </div>
-          <div class="right-mobile">
-            <img src="img/index/mobile.png" height="400px" width="700px">
-          </div>
-        </div>
-        <div class="item desctop">
-          <div class="left-desctops">
-            <h2 class="slider-title">Любим математику как никто другой</h2>
-            <span>Никакого креатива, только математические формулы для расчета идеальных пропорций</span>
-            <a class="info-btn" href="#">Узнать больше</a>
-          </div>
-          <div class="right-desctops">
-            <img src="img/index/desctops.png" height="430px" width="665px">
-          </div>
-        </div>
-        <div class="item touchpad ">
-          <div class="left-touchpad">
-            <h2 class="slider-title">Только ночь, только хардкор</h2>
-            <span>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</span>
-            <a class="info-btn" href="#">Узнать больше</a>
-          </div>
-          <div class="right-touchpad">
-            <img src="img/index/touchpad.png" height="415px" width="760px">
-          </div>
-        </div>
+
+    <div class="slider ">
+      <input type="radio" id="btn-1" name="toggle" checked>
+      <input type="radio" id="btn-2" name="toggle">
+      <input type="radio" id="btn-3" name="toggle">
+      <div class="slider-controls">
+        <label for="btn-1"></label>
+        <label for="btn-2"></label>
+        <label for="btn-3"></label>
       </div>
-      <div class="slider-navigate conteiner">
-        <button class="slider-nav"></button>
-        <button class="slider-nav"></button>
-        <button class="slider-nav"></button>
+      <div class="slides">
+        <div class="slide">
+          <div class="slide-text">
+            <div class="slide-title">Долго, дорого, скрупулезно</div>
+            <p>Математически выверенный дизайн<br>
+для вашего сайта или мобильного приложения.</p>
+            <a class="btn" href="#">Узнать больше</a>
+          </div>
+        </div>
+        <div class="slide">
+          <div class="slide-text">
+            <div class="slide-title">Дорого, скрупулезно</div>
+            <p>Математически выверенный дизайн<br>
+для вашего сайта или мобильного приложения.</p>
+            <a class="btn" href="#">Узнать больше</a>
+          </div>
+        </div>
+        <div class="slide">
+          <div class="slide-text">
+            <div class="slide-title">Скрупулезно</div>
+            <p>Математически выверенный дизайн<br>
+для вашего сайта или мобильного приложения.</p>
+            <a class="btn" href="#">Узнать больше</a>
+          </div>
+        </div>
       </div>
     </div>
   </header>
@@ -81,19 +81,19 @@
           <img  src="img/index/illustration_1.jpg" height="146px" width="300px" class="product-img" alt="Веб-сайты">
           <b class="product-title">Веб-сайты</b>
           <p class="product-info">Мир никогда не будет прежним<br> после того как увидит ваш сайт!</p>
-          <a class="web-cite-btn" href="# ">Заказать</a>
+          <a class="btn red" href="# ">Заказать</a>
         </div>
         <div class="product">
           <img  src="img/index/illustration_2.jpg" height="146px" width="300px" class="product-img" alt="Приложения">
           <b class="product-title">Приложения</b>
           <p class="product-info">Покорите топ-10 приложений в<br> AppStore и GooglePlay</p>
-          <a class="apps-btn" href="# ">Заказать</a>
+          <a class="btn green" href="# ">Заказать</a>
         </div>
         <div class="product">
           <img src="img/index/illustration_3.jpg" height="146px" width="300px" class="product-img" alt="Презентации">
           <b class="product-title">Презентации</b>
           <p class="product-info">Вы даже не подозреваете,<br> насколько вы изумительрны!</p>
-          <a class="presentation-btn" href="# ">Заказать</a>
+          <a class="btn yellow" href="# ">Заказать</a>
         </div>
       </section>
       <section class="content">
@@ -105,16 +105,16 @@
           <b class="small-title">Выполняем заказы на разработку:</b>
           <div class="content-list">
           <ul >
-            <li>Веб-сайтов любой сложности</li>
-            <li>обильных приложений для iOS и Android</li>
-            <li>Слайдшоу и видео для корпоративных презентаций</li>
+            <li class="list-item">Веб-сайтов любой сложности</li>
+            <li class="list-item">Мобильных приложений для iOS и Android</li>
+            <li class="list-item">Слайдшоу и видео для корпоративных презентаций</li>
           </ul>
         </div>
         </div>
         <div class="right-side">
           <img class="logo-img" src="img/index/nerds_illustration.jpg" height="210px" width="360px">
           <span class="small-title">С 2004 года мы любим точность во всем:</span>
-          <div class="features">
+          <div class="features-info">
             <div class="column-1">
               <span class="procents">146<sup>%</sup></span>
                 <span class="description">Уровень самоотдачи</span>
@@ -132,35 +132,14 @@
         </div>
       </section>
       <div class="partners">
-        <img src="img/index/html_academy.png" height="70px" width="200px" alt="HTML Academy">
-        <img src="img/index/borodinski.png" height="88px" width="210px" alt="Borodinski">
-        <img src="img/index/pink.png" height="50px" width="185px" alt="Pink">
-        <img src="img/index/mishka.png" height="85px" width="173px" alt="Mishka">
+        <img src="img/index/html_academy.png" height="70px" width="200px" class="partner-1" alt="HTML Academy">
+        <img src="img/index/borodinski.png" height="88px" width="210px" class="partner-2" alt="Borodinski">
+        <img src="img/index/pink.png" height="50px" width="185px" class="partner-3" alt="Pink">
+        <img src="img/index/mishka.png" height="85px" width="173px" class="partner-4" alt="Mishka">
       </div>
     </div>
   </main>
-  <div class="write-us-container">
-  <div class="write-us">
-    <span class="write-us-title">Напишите нам</span>
-    <form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
-      <div class="your-name">
-      <label for="name-field">Ваше имя:</label><br>
-      <input type="text" class="name" id="name-field" value="" placeholder="Представьтесь, пожалуйста">
-    </div>
-    <div class="your-mail">
-        <label for="email-field">Ваш e-mail:</label><br>
-      <input type="text" class="email" id="email-field" value="" placeholder="Для отправки ответа">
-    </div>
-    <div class="your-letter">
-      <label for="text-field">Тект письма:</label><br>
-      <input type="text-area" class="leter" id="text-field" value="" placeholder="В свободной форме">
-    </div>
-
-      <button class="btn" type="submit">Отправить</button>
-    </form>
-  </div>
-</div>
-  <section class="map">
+  <section class="map container">
     <div class="contacts-container">
       <div class="contacts-infotmation">
         <b class="contacts-infotmation-name">Nerds Design Studio</b><br>
@@ -173,7 +152,7 @@
       </span>
     </div>
     <div class="contact-button">
-      <a class="c-btn" href="#" >Напишите нам</a>
+      <a  href="#" >Напишите нам</a>
     </div>
     </div>
       </section>
@@ -192,5 +171,23 @@
 
       </div>
     </footer>
+    <div class="modal-content">
+      <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
+      <h2 class="modal-content-title">Напишите нам</h2>
+      <form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
+        <label>
+          Вашe имя: <br>
+        <input class="name" type="text" name="name" placeholder="Представьтесь, пожалуйста">
+      </label>
+      <label>
+          Ваш E-mail: <br>
+        <input class="email" type="text"  name="email" placeholder="Для отправки ответа">
+      </label>
+      <label>
+        Текст письма: <br>
+        <input class="letter" type="text-area"  name="letter" placeholder="В свободной форме">
+      </label>
+        <button class="btn" type="submit">Войти</button>
+    </div>
   </body>
   </html>
