--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <title>HTML Academy: Нёрдс</title>
   <link  rel="stylesheet" href="css/normalize.css">
   <link  rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="<link href="https://fonts.googleapis.com/css?family="Roboto:500,700&amp;subset=cyrillic" rel="stylesheet">
 </head>
 <body>
   <header class="main-header">
     <div class="main-header-layout container">
 
       <div class="index-logo">
-        <a href="#"><img src="img/index/nerds_logo.png" width="160px" height="62px" alt="Дизайн студия Nerds"></a>
+        <a href="#"><img src="img/index/nerds_logo.png" width="160px" height="65px" alt="Дизайн студия Nerds"></a>
       </div>
 
       <nav class="main-navigation">
@@ -96,9 +96,9 @@
           <a class="btn yellow" href="# ">Заказать</a>
         </div>
       </section>
-      <section class="content">
+      <section class="index-content">
         <div class="left-side">
-          <h2 class="second-title">Мы-маленькая, но гордая дизайн-студия из Краснодара.</h2>
+          <h2 class="second-title">Мы — маленькая, но гордая дизайн-студия из Краснодара. </h2>
           <p>
             Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.
           </p>
@@ -113,7 +113,7 @@
         </div>
         <div class="right-side">
           <img class="logo-img" src="img/index/nerds_illustration.jpg" height="210px" width="360px">
-          <span class="small-title">С 2004 года мы любим точность во всем:</span>
+          <span class="right-side-title">С 2004 года мы любим точность во всем:</span>
           <div class="features-info">
             <div class="column-1">
               <span class="procents">146<sup>%</sup></span>
@@ -132,11 +132,16 @@
         </div>
       </section>
       <div class="partners">
-        <img src="img/index/html_academy.png" height="70px" width="200px" class="partner-1" alt="HTML Academy">
-        <img src="img/index/borodinski.png" height="88px" width="210px" class="partner-2" alt="Borodinski">
-        <img src="img/index/pink.png" height="50px" width="185px" class="partner-3" alt="Pink">
-        <img src="img/index/mishka.png" height="85px" width="173px" class="partner-4" alt="Mishka">
-      </div>
+
+        <img src="img/index/html_academy.png" height="70px" width="200px" class="p1" alt="HTML Academy">
+
+        <img src="img/index/borodinski.png" height="88px" width="210px" class="p2" alt="Borodinski">
+
+        <img src="img/index/pink.png" height="50px" width="185px" class="p3" alt="Pink">
+
+
+        <img src="img/index/mishka.png" height="85px" width="173px" class="p4" alt="Mishka">
+
     </div>
   </main>
   <section class="map container">
@@ -145,7 +150,7 @@
         <b class="contacts-infotmation-name">Nerds Design Studio</b><br>
         <span class="contacts-infotmation-adress">
         191186, Санкт-Петербург,<br>
-        Б. Конюшенная, д. 19.8<br>
+        ул. Б. Конюшенная, д. 19/8<br>
       </span>
       <span class="tel">
         Тел: +7 (812) 275-75-75<br>
@@ -163,6 +168,7 @@
             <span class="slogan">Давайте дружить, это выгодно!</span>
             <span class="slogan-description">Скидка 10% для друзей из социальных сетей.</span>
           </div>
+
           <div class="social-button">
             <a class="social-btn social-btn-vk" href="#">вконтакте</a>
             <a class="social-btn social-btn-fb" href="#">фейсбук</a>
@@ -175,7 +181,8 @@
       <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
       <h2 class="modal-content-title">Напишите нам</h2>
       <form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
-        <label>
+        <div class="top_field">
+        <label >
           Вашe имя: <br>
         <input class="name" type="text" name="name" placeholder="Представьтесь, пожалуйста">
       </label>
@@ -183,11 +190,12 @@
           Ваш E-mail: <br>
         <input class="email" type="text"  name="email" placeholder="Для отправки ответа">
       </label>
+    </div>
       <label>
         Текст письма: <br>
         <input class="letter" type="text-area"  name="letter" placeholder="В свободной форме">
       </label>
-        <button class="btn" type="submit">Войти</button>
+        <button class="btn" type="submit">Отправить</button>
     </div>
   </body>
   </html>
