Попыталась оживить модальное окно

--- a/catalog.html
+++ b/catalog.html
@@ -66,16 +66,25 @@
             <h2 class="net-name">Сетка:</h2>
             <ul>
               <li class="active">
+                <label for="subscribe-field-6">
                 <input type="radio" name="net-type" id="subscribe-field-6" >
-                <label for="subscribe-field-6">Адаптивная</label>
+                <span class="radio-indicator"></span>
+                Адаптивная
+                </label>
               </li>
               <li>
+                <label for="subscribe-field-7">
                 <input type="radio" name="net-type" id="subscribe-field-7" >
-                <label for="subscribe-field-7">Фиксированная</label>
+                  <span class="radio-indicator"></span>
+                Фиксированная
+              </label>
               </li>
               <li>
+                <label for="subscribe-field-8">
                 <input type="radio" name="net-type" id="subscribe-field-8" >
-                <label for="subscribe-field-8">Резиновая</label>
+                <span class="radio-indicator"></span>
+                Резиновая
+              </label>
               </li>
             </ul>
           </div>
@@ -83,24 +92,34 @@
             <h2 class="features-name">Особенности:</h2>
             <ul>
               <li class="checked">
+                <label for="subscribe-field" class="features-label">
                 <input type="checkbox" name="Slaider" id="subscribe-field">
-                <label for="subscribe-field">Слайдер</label>
+              <span class="checkbox-indicator"></span>
+                Слайдер</label>
               </li>
               <li>
+                <label for="subscribe-field-1" class="features-label">
                 <input type="checkbox" name="feature-block" id="subscribe-field-1">
-                <label for="subscribe-field-1">Блок преимуществ</label>
+                <span class="checkbox-indicator"></span>
+                Блок преимуществ</label>
               </li>
               <li class="checked">
+                <label for="subscribe-field-1" class="features-label">
                 <input type="checkbox" name="News" id="subscribe-field-1">
-                <label for="subscribe-field-1">Новости</label>
+                  <span class="checkbox-indicator"></span>
+                Новости</label>
               </li>
               <li>
+                <label for="subscribe-field-3" class="features-label">
                 <input type="checkbox" name="Gallery" id="subscribe-field-3">
-                <label for="subscribe-field-3">Галерея</label>
+                <span class="checkbox-indicator"></span>
+                Галерея</label>
               </li>
               <li>
+                <label for="subscribe-field-4" class="features-label">
                 <input type="checkbox" name="feature-bascet" id="subscribe-field-4">
-                <label for="subscribe-field-4">Корзина</label>
+                <span class="checkbox-indicator"></span>
+                Корзина</label>
               </li>
             </ul>
           </div>
