--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       </span>
     </div>
     <div class="contact-button">
-      <a  href="#" >Напишите нам</a>
+      <a class="contact-link"  href="#" >Напишите нам</a>
     </div>
     </div>
       </section>
@@ -197,5 +197,56 @@
       </label>
         <button class="btn" type="submit">Отправить</button>
     </div>
+    <script>
+    var link = document.querySelector(".name");
+
+    var popup = document.querySelector(".modal-content");
+    var close = popup.querySelector(".modal-content-close");
+
+    var form = popup.querySelector("form");
+    var name = popup.querySelector(".name");
+    var email = popup.querySelector(".email");
+
+    var storage = localStorage.getItem("name");
+
+    link.addEventListener("click", function(event) {
+      event.preventDefault();
+      popup.classList.add("modal-content-show");
+
+      if (storage) {
+        name.value = storage;
+        email.focus();
+      } else {
+        name.focus();
+      }
+
+    });
+
+    close.addEventListener("click", function(event) {
+      event.preventDefault();
+      popup.classList.remove("modal-content-show");
+      popup.classList.remove("modal-error");
+    });
+
+    form.addEventListener("submit", function(event) {
+      if (!name.value || !email.value) {
+        event.preventDefault();
+        popup.classList.remove("modal-error");
+        popup.offsetWidth = popup.offsetWidth;
+        popup.classList.add("modal-error");
+      } else {
+        localStorage.setItem("name", name.value);
+      }
+    });
+
+    window.addEventListener("keydown", function(event) {
+      if (event.keyCode === 27) {
+        if (popup.classList.contains("modal-content-show")) {
+          popup.classList.remove("modal-content-show");
+          popup.classList.remove("modal-error");
+        }
+      }
+    })
+    </script>
   </body>
   </html>
