--- a/catalog.html
+++ b/catalog.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Нёрдс</title>
-  <link  rel="stylesheet" href="css/normalize.css">
+
   <link  rel="stylesheet" href="css/style.css">
-  <link href="<link href="https://fonts.googleapis.com/css?family="Roboto:500,700&amp;subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
 </head>
 <body>
   <header class="catalog-header">
@@ -279,6 +279,8 @@
         <input class="letter" type="text-area"  name="letter" placeholder="В свободной форме">
       </label>
         <button class="btn" type="submit">Войти</button>
+      </form>
     </div>
+    <script src="js/script.js"></script>
   </body>
   </html>
