--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Нёрдс</title>
-  <link  rel="stylesheet" href="css/normalize.css">
+
   <link  rel="stylesheet" href="css/style.css">
-  <link href="<link href="https://fonts.googleapis.com/css?family="Roboto:500,700&amp;subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
 </head>
 <body>
   <header class="main-header">
@@ -143,6 +143,7 @@
         <img src="img/index/mishka.png" height="85px" width="173px" class="p4" alt="Mishka">
 
     </div>
+  </div>
   </main>
   <section class="map container">
     <div class="contacts-container">
@@ -184,11 +185,11 @@
         <div class="top_field">
         <label >
           Вашe имя: <br>
-        <input class="name" type="text" name="name" placeholder="Представьтесь, пожалуйста">
+        <input class="name" type="text" name="name" placeholder="Представьтесь, пожалуйста" required>
       </label>
       <label>
           Ваш E-mail: <br>
-        <input class="email" type="text"  name="email" placeholder="Для отправки ответа">
+        <input class="email" type="text"  name="email" placeholder="Для отправки ответа" required>
       </label>
     </div>
       <label>
@@ -196,7 +197,8 @@
         <input class="letter" type="text-area"  name="letter" placeholder="В свободной форме">
       </label>
         <button class="btn" type="submit">Отправить</button>
+      </form>
     </div>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </body>
   </html>
