--- a/catalog.html
+++ b/catalog.html
@@ -243,7 +243,8 @@
       </span>
     </div>
     <div class="contact-button">
-      <a  href="#" >Напишите нам</a>
+      <a class="contact-link"  href="#" >Напишите нам</a>
+
     </div>
     </div>
       </section>
@@ -266,19 +267,21 @@
       <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
       <h2 class="modal-content-title">Напишите нам</h2>
       <form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
-        <label>
+        <div class="top_field">
+        <label >
           Вашe имя: <br>
-        <input class="name" type="text" name="name" placeholder="Представьтесь, пожалуйста">
+        <input class="name" type="text" name="name" placeholder="Представьтесь, пожалуйста" >
       </label>
       <label>
           Ваш E-mail: <br>
-        <input class="email" type="text"  name="email" placeholder="Для отправки ответа">
+        <input class="email" type="text"  name="email" placeholder="Для отправки ответа" >
       </label>
+    </div>
       <label>
         Текст письма: <br>
-        <input class="letter" type="text-area"  name="letter" placeholder="В свободной форме">
+        <input class="letter" type="text-area"  name="letter" placeholder="В свободной форме" >
       </label>
-        <button class="btn" type="submit">Войти</button>
+        <button class="btn" type="submit">Отправить</button>
       </form>
     </div>
     <script src="js/script.js"></script>
