--- a/index.html
+++ b/index.html
@@ -185,16 +185,16 @@
         <div class="top_field">
         <label >
           Вашe имя: <br>
-        <input class="name" type="text" name="name" placeholder="Представьтесь, пожалуйста" required>
+        <input class="name" type="text" name="name" placeholder="Представьтесь, пожалуйста" >
       </label>
       <label>
           Ваш E-mail: <br>
-        <input class="email" type="text"  name="email" placeholder="Для отправки ответа" required>
+        <input class="email" type="text"  name="email" placeholder="Для отправки ответа" >
       </label>
     </div>
       <label>
         Текст письма: <br>
-        <input class="letter" type="text-area"  name="letter" placeholder="В свободной форме">
+        <input class="letter" type="text-area"  name="letter" placeholder="В свободной форме" >
       </label>
         <button class="btn" type="submit">Отправить</button>
       </form>
