--- a/catalog.html
+++ b/catalog.html
@@ -59,7 +59,7 @@
         </div>
         <div class="price-controls">
           <label class="min-price">от <input name="min-price" type="text" value="0"></label>
-          <label class="max-price">до <input name="max-price" type="text" value="15000"></label>
+          <label class="max-price">до <input name="max-price" type="text" value="15 000"></label>
         </div>
       </div>
           <div class="type-of-net">
@@ -91,7 +91,7 @@
           <div class="features">
             <h2 class="features-name">Особенности:</h2>
             <ul>
-              <li class="checked">
+              <li >
                 <label for="subscribe-field" class="features-label">
                 <input type="checkbox" name="Slaider" id="subscribe-field">
               <span class="checkbox-indicator"></span>
@@ -103,7 +103,7 @@
                 <span class="checkbox-indicator"></span>
                 Блок преимуществ</label>
               </li>
-              <li class="checked">
+              <li >
                 <label for="subscribe-field-1" class="features-label">
                 <input type="checkbox" name="News" id="subscribe-field-1">
                   <span class="checkbox-indicator"></span>
@@ -147,9 +147,9 @@
           <article class="catalog-gallery-item">
             <img class="item-image" src="img/catalog/sedona.jpg" height="615px" weidth="360px" alt="Sedona">
             <div class="wrapper-block">
-              <a href="#">
-                <h2 class="item-title">Sedona</h2>
-              </a>
+
+                <h2 class="item-title"><a href="#">Sedona</a></h2>
+
               <span class="wrapper-description">Информационный сайт<br> для туристов</span>
               <a href="#" class="btn">9 900 руб.</a>
             </div>
@@ -157,9 +157,9 @@
           <article class="catalog-gallery-item">
             <img class="item-image" src="img/catalog/pink.jpg" height="615px" weidth="360px" alt="Pink">
             <div class="wrapper-block">
-              <a href="#">
-                <h2 class="item-title">Pink App</h2>
-              </a>
+
+                <h2 class="item-title">  <a href="#">Pink App  </a></h2>
+
               <span class="wrapper-description">Продуктовый лендинг<br> приложения для IOS И Android</span>
               <a href="#" class="btn">9 900 руб.</a>
             </div>
@@ -167,9 +167,9 @@
           <article class="catalog-gallery-item">
             <img class="item-image" src="img/catalog/barbershop.jpg" height="615px" weidth="360px" alt="Borodinski">
             <div class="wrapper-block">
-              <a href="#">
-                <h2 class="item-title">Barbershop</h2>
-              </a>
+
+                <h2 class="item-title"><a href="#">Barbershop</a></h2>
+
               <span class="wrapper-description">Сайт салона красоты.<br> Для мужчин, да.</span>
               <a href="#" class="btn">9 900 руб.</a>
             </div>
@@ -178,9 +178,9 @@
           <article class="catalog-gallery-item">
             <img class="item-image" src="img/catalog/mishka.jpg" height="615px" weidth="360px" alt="Mishka">
             <div class="wrapper-block">
-              <a href="#">
-                <h2 class="item-title">Mishka</h2>
-              </a>
+
+                <h2 class="item-title"><a href="#">Mishka</a></h2>
+
               <span class="wrapper-description">Интернет-магазин<br> вязаных игрушек</span>
               <a href="#" class="btn">9 900 руб.</a>
             </div>
@@ -189,9 +189,9 @@
           <article class="catalog-gallery-item">
             <img class="item-image" src="img/catalog/aplus.jpg" height="615px" weidth="260px" alt="Аplus">
             <div class="wrapper-block">
-              <a href="#">
-                <h2 class="item-title">A Plus</h2>
-              </a>
+
+                <h2 class="item-title"><a href="#">A Plus</a></h2>
+
               <span class="wrapper-description">Лендинг курсов повышения<br> квалификации</span>
               <a href="#" class="btn">9 900 руб.</a>
             </div>
@@ -200,9 +200,9 @@
           <article class="catalog-gallery-item">
             <img class="item-image" src="img/catalog/kvast.jpg" height="615px" weidth="360px" alt="Кваст">
             <div class="wrapper-block">
-              <a href="#">
-                <h2 class="item-title">Кваст</h2>
-              </a>
+
+                <h2  class="item-title"><a href="#" >Кваст</a></h2>
+
               <span class="wrapper-description">Промо-сфйт производителя<br> крафтового кваса</span>
               <a href="#" class="btn">9 900 руб.</a>
             </div>
@@ -221,7 +221,7 @@
               <a class="btn " href="#">3</a>
             </li>
             <li class="pag">
-              <a class="btn btn-big" href="#">Седующая</a>
+              <a class="btn btn-big" href="#">Следующая</a>
             </li>
           </ul>
         </section>
@@ -230,20 +230,20 @@
 </div>
     </div>
   </main>
-  <section class="map container">
-    <div class="contacts-container">
+  <section class="map container map-catalog">
+    <div class="contacts-container-catalog">
       <div class="contacts-infotmation">
         <b class="contacts-infotmation-name">Nerds Design Studio</b><br>
         <span class="contacts-infotmation-adress">
         191186, Санкт-Петербург,<br>
-        Б. Конюшенная, д. 19.8<br>
+        ул. Б. Конюшенная, д. 19.8<br>
       </span>
       <span class="tel">
         Тел: +7 (812) 275-75-75<br>
       </span>
     </div>
     <div class="contact-button">
-      <a class="contact-link"  href="#" >Напишите нам</a>
+      <a  href="#" >Напишите нам</a>
 
     </div>
     </div>
@@ -269,16 +269,16 @@
       <form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
         <div class="top_field">
         <label >
-          Вашe имя: <br>
+          Вашe имя:
         <input class="name" type="text" name="name" placeholder="Представьтесь, пожалуйста" >
       </label>
       <label>
-          Ваш E-mail: <br>
+          Ваш E-mail:
         <input class="email" type="text"  name="email" placeholder="Для отправки ответа" >
       </label>
     </div>
       <label>
-        Текст письма: <br>
+        Текст письма:
         <input class="letter" type="text-area"  name="letter" placeholder="В свободной форме" >
       </label>
         <button class="btn" type="submit">Отправить</button>
