--- a/index.html
+++ b/index.html
@@ -132,14 +132,15 @@
         </div>
       </section>
       <div class="partners">
-
+        <div class="partner">
         <img src="img/index/html_academy.png" height="70px" width="200px" class="p1" alt="HTML Academy">
-
+      </div>
+      <div class="partner2">
         <img src="img/index/borodinski.png" height="88px" width="210px" class="p2" alt="Borodinski">
-
+      </div>
+        <div class="partner3">
         <img src="img/index/pink.png" height="50px" width="185px" class="p3" alt="Pink">
-
-
+</div>
         <img src="img/index/mishka.png" height="85px" width="173px" class="p4" alt="Mishka">
 
     </div>
@@ -158,7 +159,7 @@
       </span>
     </div>
     <div class="contact-button">
-      <a class="contact-link"  href="#" >Напишите нам</a>
+      <a   href="#" >Напишите нам</a>
     </div>
     </div>
       </section>
@@ -184,19 +185,19 @@
       <form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
         <div class="top_field">
         <label >
-          Вашe имя: <br>
+          Вашe имя:
         <input class="name" type="text" name="name" placeholder="Представьтесь, пожалуйста" >
       </label>
       <label>
-          Ваш E-mail: <br>
+          Ваш E-mail:
         <input class="email" type="text"  name="email" placeholder="Для отправки ответа" >
       </label>
     </div>
-      <label>
-        Текст письма: <br>
+      <label >
+        Текст письма:
         <input class="letter" type="text-area"  name="letter" placeholder="В свободной форме" >
       </label>
-        <button class="btn" type="submit">Отправить</button>
+        <button class="btn " type="submit">Отправить</button>
       </form>
     </div>
     <script src="js/script.js"></script>
